tests/integration/errors/negate_string.rsg
// TEST: compile_error
// EXPECT-ERROR: '-' requires numeric operand
module test_err

fn main() {
    var x: str = -"hello"
}
